--- a/package.json
+++ b/package.json
@@ -13,10 +13,11 @@
     "cors": "^2.8.5",
     "express": "^4.17.3",
     "mongodb": "^4.5.0",
+    "multer": "^1.4.4",
     "ws": "^8.5.0",
     "yarn": "^1.22.18"
   },
   "engines": {
-    "node": "v16.14.0"
+    "node": "v14.17.0"
   }
 }
