--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "express": "^4.17.3",
+    "fs": "^0.0.1-security",
+    "image-size": "^1.0.1",
     "mongodb": "^4.5.0",
     "multer": "^1.4.4",
     "ws": "^8.5.0",
