--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
   "author": "Alexey Pavlov",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.1137.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.1",
     "express": "^4.17.3",
     "fs": "^0.0.1-security",
     "image-size": "^1.0.1",
