--- a/.env
+++ b/.env
@@ -2,3 +2,8 @@ AWS_BUCKET_NAME="cat-talk-s3"
 AWS_BUCKET_REGION="eu-central-1"
 AWS_ACCESS_KEY="AKIA4LS6RYULPA4JHUZU"
 AWS_SECRET_KEY="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"
+
+AWS_FILES_BUCKET_NAME="cat-talk-chat-files"
+AWS_FILES_BUCKET_REGION="eu-central-1"
+AWS_FILES_ACCESS_KEY="AKIA4LS6RYULDETA6FI5"
+AWS_FILES_SECRET_KEY="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"
