--- a/.env
+++ b/.env
@@ -9,3 +9,4 @@ AWS_FILES_ACCESS_KEY="AKIA4LS6RYULDETA6FI5"
 AWS_FILES_SECRET_KEY="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"
 
 CAT_TALK_GOOGLE_CLIENT_ID = 668270444070-pucnkipcnf4cnps6k41gn5ndgos8ejja.apps.googleusercontent.com
+LINK="mongodb+srv://pavlovvv:mspx@cattalk-api.jhvnkhb.mongodb.net/"
